tests/sources/invalid/classes/super_call_arg_type.fire
// Semantic error: 'this.super(...)' with an argument of the wrong type for
// the base class's constructor.

class Base {
    x: int32;

    fn Base(x: int32) {
        this.x = x;
    }
}

class Derived from Base {
    y: int32;

    fn Derived(y: int32) {
        this.super("bad");  //~ ERROR FS-SEM-0010 @20
        this.y = y;
    }
}
